--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 			<div class="menu-list">
 				<div class="menu-list-col">
-					<div id="aaf"　div onclick="goTo('home.html')" style="cursor: pointer;"><span>> TOP</span></div>
+					<div id="aaf"　div onclick="goTo('index.html')" style="cursor: pointer;"><span>> TOP</span></div>
 					<div id="aag" div onclick="goTo('about/about.html')" style="cursor: pointer;"><span>> ABOUT</span></div>
 					<div id="aah" onclick="goTo('philosophy/philosophy.html')" style="cursor: pointer;"><span>> PHILOSOPHY</span></div>					
 				</div>
@@ -203,7 +203,7 @@
 				</div>
 				<div class="footer-other">
 					<div class="footer-other-c1">
-						<div id="footer-top" onclick="goTo('home.html')" style="cursor: pointer;">
+						<div id="footer-top" onclick="goTo('index.html')" style="cursor: pointer;">
 							<span>TOP</span>
 						</div>
 						<div  id="footer-about" onclick="goTo('about/about.html')" style="cursor: pointer;">
